--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -48,8 +48,7 @@
                                   aria-roledescription="Auf- und absteigende Sortierung möglich."
                                   aria-describedby="ascSortedTitle descSortedTitle noForms"
                                   i18n
-                                  i18n-aria-roledescription>Titel
-                            </span>
+                                  i18n-aria-roledescription>Titel</span>
                             <span *ngIf="sort && sort === 'title'">
                                 <span *ngIf="order === 'asc'"
                                       id="ascSortedTitle"
