--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -198,7 +198,7 @@
                             <option value="date"
                                     i18n>Datum</option>
                             <option value="datetime-local"
-                                    i18n>Datum &amp; Uhrzeit</option>
+                                    i18n>Datum und Uhrzeit</option>
                             <option value="email"
                                     i18n>E-Mail</option>
                             <option value="month"
