--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -389,7 +389,7 @@
                                 </svg>
                             </a>
                         </td>
-                        <td>{task.status, select, created {Erstellt} accessed {In bearbeitung} submitted
+                        <td>{task.status, select, created {Erstellt} accessed {In Bearbeitung} submitted
                             {Abgeschlossen}}</td>
                         <td>
                             {{ task.description }}
