--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -105,7 +105,7 @@
                    id="validatorExpQuestion{{ i }}{{ uniqId }}"
                    name="validatorExpQuestion{{ i }}{{ uniqId }}"
                    i18n-placeholder
-                   placeholder="Wert oder Variabel {e1}"
+                   placeholder="Wert oder Variabel"
                    maxlength="200"
                    required>
         </div>
@@ -149,7 +149,7 @@
              *ngIf="item.type === 'expression' && !(item.operator === 'empty' || item.operator === 'notempty')">
             <label for="validatorExpValueA{{ i }}{{ uniqId }}"
                    class="sr-only"
-                   i18n>Wert oder Variabel %7Be1%7D</label>
+                   i18n>Wert oder Variabel</label>
             <input type="text"
                    class="form-control"
                    [attr.list]="'validationlist-' + uniqId"
@@ -160,7 +160,7 @@
                    id="validatorExpValueA{{ i }}{{ uniqId }}"
                    name="validatorExpValueA{{ i }}{{ uniqId }}"
                    i18n-placeholder
-                   placeholder="Wert oder Variabel {e1}"
+                   placeholder="Wert oder Variabel"
                    maxlength="200"
                    required>
 
