--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -118,7 +118,7 @@
                     <path fill-rule="evenodd"
                           d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
                 </svg>
-                <span>News</span>
+                <span i18n>News</span>
             </h2>
             <hr class="my-4">
         </div>
