boris details refactoring

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -1,4 +1,5 @@
-<div class="wrapper">
+<div class="wrapper"
+[class]="isCollapsed ? '' : 'border'">
     <!-- desktop -->
     <div class="d-none d-md-block">
         <div class="nav-scroller bg-white shadow-sm border-top">
