--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
@@ -1,75 +1,27 @@
-power-bodenrichtwertkarte {
-    flex-grow: 1;
-}
-
-.height-minus-header-map {
+.map {
     height: calc(100vh - 106px);
-    -moz-transition: height 0.6s ease;
-    -webkit-transition: height 0.6s ease;
-    -o-transition: height 0.6s ease;
-    transition: height 0.6s ease;
+    max-height: calc(100vh - 106px);
+    padding: 0rem;
 }
 
-.small {
-    height: 50vh;
-    -moz-transition: height 0.6s ease;
-    -webkit-transition: height 0.6s ease;
-    -o-transition: height 0.6s ease;
-    transition: height 0.6s ease;
+.map-collapsed {
+    height: calc(100vh - 106px);
+    padding: 0rem;
 }
 
-.anchor {
-    position: relative;
-    top: -100px;
+.description {
+    /* height: calc(100vh - 106px); */
 }
 
-.nav-scroller {
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
+.description-collapsed {
+    
+}
+
+.verlauf {
+    min-height: calc(100vh -106px);
+}
+
+.btn-collapse {
+    font-size: x-large;
     height: 2.75rem;
-    overflow-y: hidden;
-}
-
-.nav-scroller .nav {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    color: rgba(255, 255, 255, 0.75);
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-}
-
-.nav-underline .nav-link {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    font-size: 0.875rem;
-    color: #6c757d;
-}
-
-.nav-underline .nav-link:hover {
-    color: #007bff;
-}
-
-.nav-underline .active {
-    font-weight: 500;
-    color: #343a40;
-}
-
-ngb-accordion {
-    background-color: white !important;
-    border-bottom: 0 !important;
-}
-
-ngb-panel {
-    border: 0 !important;
-}
-
-ngb-accordion /deep/ .card /deep/ .card-header {
-    background-color: white !important;
 }
