--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -1,38 +1,65 @@
-<div class="wrapper">
-    <div class="height-minus-header-map" #map [class.small]="features">
-        <power-bodenrichtwertkarte [(stichtag)]="stichtag" [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
-    </div>
-    <ngb-accordion #acc="ngbAccordion">
-        <ngb-panel>
-            <ng-template ngbPanelHeader>
-                <div>
-                    <div *ngIf="!adresse" class="text-center">
-                        <h5 class="m-0 mx-center" i18n>Wählen Sie eine Position</h5>
+<div class="container-fluid">
+    <div class="row">
+        <div id="mapWrapper"
+             [class]="isCollapsed ? 'col-12 map-collapsed' : 'col-6 map'">
+            <power-bodenrichtwertkarte #map
+                                       [isCollapsed]="isCollapsed"
+                                       [(stichtag)]="stichtag"
+                                       [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
+        </div>
+        <div class="col-6"
+             [class]="isCollapsed ? 'col-12 description-collapsed' : 'col-6 description'">
+            <div class="row">
+                <div *ngIf="!adresse"
+                     class="text-center border-top col-12">
+                    <h5 class="m-3 mx-center"
+                        i18n>Wählen Sie eine Position</h5>
+                </div>
+                <button *ngIf="adresse"
+                        type="button"
+                        class="btn btn-collapse border col-12 p-0"
+                        (click)="isCollapsed = !isCollapsed"
+                        [attr.aria-expanded]="!isCollapsed"
+                        aria-controls="collapseBasic">{{ adresse.properties.text }} <img
+                         src="{{ isCollapsed ? '/assets/icons/chevron-down.svg' : '/assets/icons/chevron-up.svg'}}"
+                         width="25"
+                         height="25"
+                         alt="Einklappen/ausklappen"
+                         i18n-alt>
+                </button>
+            </div>
+            <div class="row h-100">
+                <div #collapse
+                     id="collapseBasic"
+                     class="p-0 col-12"
+                     [collapse]="isCollapsed"
+                     [isAnimated]="true"
+                     (expands)="onExpands()"
+                     (expanded)="expanded()"
+                     (collapsed)="collapsed()">
+                    <div *ngIf="!adresse || adresse.properties.bundesland !== 'Niedersachsen'">
+                        <p class="text-center">Keine gültige Adresse! <br> Bitte wählen Sie eine gültige Adresse
+                            innerhalb
+                            von
+                            Niedersachsen aus.</p>
                     </div>
-                    <div *ngIf="adresse" class="text-center">
-                        <h5 class="m-0 mx-center">{{adresse.properties.text}}
-                            <button type="button" (click)="map.classList.toggle('small')" class="btn btn-link p-0">
-                                <img src="{{ detailArrow ? '/assets/icons/chevron-up.svg' : '/assets/icons/chevron-down.svg'}}"
-                                     width="25" height="25"
-                                     alt="Einklappen/ausklappen" i18n-alt
-                                     (click)="toggleDetailArrow()">
-                            </button>
-                        </h5>
+                    <div class="well well-lg card card-block card-header verlauf">
+                        <div class="row pt-3"
+                             *ngIf="features">
+                            <power-bodenrichtwert-liste [stichtag]="stichtag"
+                                                        [teilmarkt]="teilmarkt"
+                                                        [features]="features">
+                            </power-bodenrichtwert-liste>
+                        </div>
+                        <div class="row pt-3"
+                             [class.d-none]="!features">
+                            <power-bodenrichtwert-verlauf class="col-md-12 p-0"
+                                                          [features]="features"></power-bodenrichtwert-verlauf>
+                        </div>
                     </div>
                 </div>
-            </ng-template>
-            <ng-template ngbPanelContent>
-                <ng-container *ngIf="!adresse || adresse.properties.bundesland !== 'Niedersachsen'">
-                    <p class="text-center">Keine gültige Adresse! <br> Bitte wählen Sie eine gültige Adresse innerhalb von Niedersachsen aus.</p>
-                </ng-container>
-                <power-bodenrichtwert-liste [stichtag]="stichtag"
-                                            [teilmarkt]="teilmarkt"
-                                            [features]="features">
-                </power-bodenrichtwert-liste>
-            </ng-template>
-        </ngb-panel>
-    </ngb-accordion>
-    <div class="row m-1 pt-3" [class.d-none]="!features">
-        <power-bodenrichtwert-verlauf class="col-md-12 p-0" [features]="features"></power-bodenrichtwert-verlauf>
+
+            </div>
+        </div>
     </div>
 </div>
