Completed translations NIPIX

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -198,7 +198,7 @@
                         #searchWoMaReg="ngbTypeahead">
                         <ng-container *ngIf="regionName(nipixStatic.data.gemeinden[model]) !== ''">
                             <hr>
-                            <ng-container i18n>Ihre Wohnungsmarktregion</ng-container>: {{ regionName(nipixStatic.data.gemeinden[model]) }}
+                            <ng-container i18n>Ihre Wohnungsmarktregion</ng-container>: {{ nipixRuntime.translate(regionName(nipixStatic.data.gemeinden[model])) }}
                         </ng-container>
 
                 </ng-template>
