--- a/power/src/app/bodenrichtwert/bodenrichtwert-liste/bodenrichtwert-liste.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-liste/bodenrichtwert-liste.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-sm" *ngFor="let ft of filteredFeatures">
+<div class="row m-0 p-0">
+    <div class="col-sm-12 p-1" *ngFor="let ft of filteredFeatures">
         <power-bodenrichtwert-detail [feature]="ft"></power-bodenrichtwert-detail>
     </div>
 </div>
