--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card m-0">
     <div class="card-header">
         <div class="row">
             <h5 class="col-md-5 mb-0"><b>{{brzStrings.brz | hyphenate}}</b></h5>
