--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0 m-0">
     <div class="row m-0">
         <div id="mapWrapper"
-             [class]="isCollapsed ? 'col-12 map-collapsed' : 'col-6 map'">
+             [class]="isCollapsed ? 'col-12 map-collapsed' : 'col-lg-6 map'">
             <power-bodenrichtwertkarte #map
                                        [isCollapsed]="isCollapsed"
                                        [isExpanded]="isExpanded"
@@ -9,7 +9,7 @@
                                        [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
         </div>
         <div class="col-6"
-             [class]="isCollapsed ? 'col-12' : 'col-6'">
+             [class]="isCollapsed ? 'col-12' : 'col-lg-6'">
             <div class="row">
                 <div *ngIf="!adresse"
                      class="text-center border-top col-12">
