refactoring linter/tests

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
@@ -1,16 +1,16 @@
 .map {
     height: calc(100vh - 57px);
     max-height: calc(100vh - 57px);
-    padding: 0rem;
+    padding: 0;
 }
 
 .map-collapsed {
     height: calc(100vh - 106px);
-    padding: 0rem;
+    padding: 0;
 }
 
 .verlauf {
-    min-height: calc(100vh -106px);
+    min-height: calc(100vh - 106px);
 }
 
 .details {
