--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -1,20 +1,30 @@
 <div class="wrapper">
-    <div class="height-minus-header-map" #map [class.small]="features">
-        <power-bodenrichtwertkarte [(stichtag)]="stichtag" [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
+    <div class="height-minus-header-map"
+         #map
+         [class.small]="features">
+        <power-bodenrichtwertkarte [(stichtag)]="stichtag"
+                                   [(teilmarkt)]="teilmarkt"></power-bodenrichtwertkarte>
     </div>
     <ngb-accordion #acc="ngbAccordion">
         <ngb-panel>
             <ng-template ngbPanelHeader>
                 <div>
-                    <div *ngIf="!adresse" class="text-center">
-                        <h5 class="m-0 mx-center" i18n>Wählen Sie eine Position</h5>
+                    <div *ngIf="!adresse"
+                         class="text-center">
+                        <h5 class="m-0 mx-center"
+                            i18n>Wählen Sie eine Position</h5>
                     </div>
-                    <div *ngIf="adresse" class="text-center">
+                    <div *ngIf="adresse"
+                         class="text-center">
                         <h5 class="m-0 mx-center">{{adresse.properties.text}}
-                            <button type="button" (click)="map.classList.toggle('small')" class="btn btn-link p-0">
+                            <button type="button"
+                                    (click)="map.classList.toggle('small')"
+                                    class="btn btn-link p-0">
                                 <img src="{{ detailArrow ? '/assets/icons/chevron-up.svg' : '/assets/icons/chevron-down.svg'}}"
-                                     width="25" height="25"
-                                     alt="Einklappen/ausklappen" i18n-alt
+                                     width="25"
+                                     height="25"
+                                     alt="Einklappen/ausklappen"
+                                     i18n-alt
                                      (click)="toggleDetailArrow()">
                             </button>
                         </h5>
@@ -22,9 +32,38 @@
                 </div>
             </ng-template>
             <ng-template ngbPanelContent>
-                <ng-container *ngIf="!adresse || adresse.properties.bundesland !== 'Niedersachsen'">
-                    <p class="text-center">Keine gültige Adresse! <br> Bitte wählen Sie eine gültige Adresse innerhalb von Niedersachsen aus.</p>
-                </ng-container>
+                <div
+                     *ngIf="(!adresse || adresse.properties.bundesland != 'Niedersachsen') && !features.features.length">
+                    <p class="text-center"
+                       i18n>Keine gültige Adresse!</p>
+                    <br>
+                    <p class="text-center"
+                       i18n>Hinweis: </p>
+                    <p class="text-center"
+                       i18n>Bitte wählen Sie eine gültige Adresse innerhalb
+                        von Niedersachsen aus.</p>
+                    <p class="text-center"
+                       i18n>Die Genauigkeit des Suchradius für die Adresse beträgt 50
+                        Meter. </p>
+                </div>
+                <div *ngIf="adresse && adresse.properties.bundesland == 'Niedersachsen' && !features.features.length">
+                    <p class="text-center"
+                       i18n>Es liegen keine Bodenrichtwertdaten für diese Adresse vor.</p>
+                </div>
+                <div *ngIf="!adresse && features.features.length">
+                    <p class="text-center"
+                       i18n>Es liegen Bodenrichtwertdaten für diese Koordinate vor. </p>
+                    <p class="text-center"
+                       i18n>
+                        Jedoch konnte keine Adresse für diesen Standort gefunden werden.
+                    </p>
+                    <p class="text-center"
+                       i18n>
+                        Die Genauigkeit des Suchradius für die Adresse beträgt 50
+                        Meter.
+                    </p>
+                </div>
+
                 <power-bodenrichtwert-liste [stichtag]="stichtag"
                                             [teilmarkt]="teilmarkt"
                                             [features]="features">
@@ -32,7 +71,10 @@
             </ng-template>
         </ngb-panel>
     </ngb-accordion>
-    <div class="row m-1 pt-3" [class.d-none]="!features">
-        <power-bodenrichtwert-verlauf class="col-md-12 p-0" [features]="features"></power-bodenrichtwert-verlauf>
+    <div class="row m-1 pt-3"
+         [class.d-none]="!features">
+        <power-bodenrichtwert-verlauf class="col-md-12 p-0"
+                                      [features]="features">
+        </power-bodenrichtwert-verlauf>
     </div>
 </div>
